fix(forms): update the spacing between two form groups

--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -501,7 +501,7 @@ $form-check-input-margin-x: .25rem !default;
 
 $form-check-inline-margin-x: .75rem !default;
 
-$form-group-margin-bottom:       ($spacer * 2);
+$form-group-margin-bottom:       ($spacer / 2);
 
 $input-group-addon-bg:           $white;
 $input-group-addon-border-color: $input-border-color;
