--- a/scss/_o-forms.scss
+++ b/scss/_o-forms.scss
@@ -47,7 +47,7 @@
   }
 
   .form-control-label {
-    margin-bottom: .625rem;
+    margin-bottom: 0;
   }
 
   &.row {
